# packages/@automatons/tools/src/types/openapi.ts
@@ -1,68 +1,69 @@
-type OMap<T> = {
-  [key: string]: T
-}
-
-export type Openapi = {
+export interface Openapi {
   openapi: string;
   info: OpenapiInfo;
   servers?: OpenapiServer[];
   tags?: OpenapiTag[];
-  paths: OMap<OpenapiPath>
+  paths: OpenapiMap<OpenapiPath>
   components?: OpenapiComponents;
   security?: OpenapiSecurity[];
   externalDocs?: OpenapiExternalDocument;
 }
 
-type OpenapiInfo = {
+export interface OpenapiMap<T> {
+  [key: string]: T
+}
+
+export interface OpenapiInfo {
   title: string;
   version: string;
   description?: string;
   termsOfService?: string;
   contact?: OpenapiInfoContact;
   license?: OpenapiInfoLicense;
-};
+}
 
-type OpenapiInfoContact = {
+export interface OpenapiInfoContact {
   name: string;
   url?: string;
 }
 
-type OpenapiInfoLicense = {
+export interface OpenapiInfoLicense {
   name: string;
   url?: string;
 }
 
-type OpenapiServer = {
+export interface OpenapiServer {
   url: string;
   description?: string;
-  variables?: OMap<OpenapiServerVariable>;
+  variables?: OpenapiMap<OpenapiServerVariable>;
 }
 
-type OpenapiServerVariable = {
+export interface OpenapiServerVariable {
   default: string;
   description?: string;
-  enums: string[];
+  enum: string[];
 }
 
-type OpenapiExternalDocument = {
+export interface OpenapiExternalDocument {
   url: string;
   description?: string;
 }
 
-type OpenapiTag = {
+export interface OpenapiTag {
   name: string;
   description?: string;
   externalDocs?: OpenapiExternalDocument;
 }
 
-type OpenapiSecurity = {
+export interface OpenapiSecurity {
   [key: string]: string[]
-};
+}
 
-type OpenapiPath = {};
+export interface OpenapiPath {
+}
 
-type OpenapiComponents = {
-  schemas?: OMap<OpenapiSchema>
+export interface OpenapiComponents {
+  schemas?: OpenapiMap<OpenapiSchema>
   responses?: {};
   parameters?: {};
   examples?: {};
@@ -71,16 +72,9 @@ type OpenapiComponents = {
   securitySchemes?: {};
   links?: {};
   callbacks?: {};
-};
-
-export const isReference = (obj: object): obj is OpenapiReference =>
-  obj.hasOwnProperty('$ref');
-
-type OpenapiReference = {
-  '$ref': string;
 }
 
-type OpenapiSchema = OpenapiSchemaString
+export type OpenapiSchema = OpenapiSchemaString
   | OpenapiSchemaBoolean
   | OpenapiSchemaNumber
   | OpenapiSchemaInteger
@@ -90,61 +84,67 @@ type OpenapiSchema = OpenapiSchemaString
   | OpenapiSchemaOneOf
   | OpenapiReference;
 
-type OpenapiSchemaString = {
+export interface OpenapiSchemaString extends OpenapiSchemaCommon {
   type: 'string';
   format?: 'date' | 'date-time' | 'password' | 'byte' | 'binary' | string
   minLength?: number;
   maxLength?: number;
   pattern?: string;
-  enums?: string[];
-} & OpenapiSchemaCommon;
+  enum?: string[];
+}
 
-type OpenapiSchemaBoolean = {
+export interface OpenapiReference extends OpenapiSchemaCommon {
+  '$ref': string;
+}
+
+export interface OpenapiSchemaBoolean extends OpenapiSchemaCommon {
   type: 'boolean';
-} & OpenapiSchemaCommon;
+}
 
-type OpenapiSchemaNumber = {
+export interface OpenapiSchemaNumber extends OpenapiSchemaCommon {
   type: 'number';
   format?: 'float' | 'double' | string;
+  enum?: number[];
   multipleOf?: number;
   minimum?: number;
   exclusiveMinimum?: boolean;
   maximum?: number;
   exclusiveMaximum?: boolean;
-} & OpenapiSchemaCommon;
+}
 
-type OpenapiSchemaInteger = {
+export interface OpenapiSchemaInteger extends OpenapiSchemaCommon {
   type: 'integer';
-  format?: 'int32' | 'int64' | string
+  format?: 'int32' | 'int64' | string;
+  enum?: number[];
   multipleOf?: number;
   minimum?: number;
   exclusiveMinimum?: boolean;
   maximum?: number;
   exclusiveMaximum?: boolean;
-} & OpenapiSchemaCommon;
+}
 
-type OpenapiSchemaObject = {
+export interface OpenapiSchemaObject extends OpenapiSchemaCommon {
   type: 'object';
   required?: string[];
   minProperties?: number;
   maxProperties?: number;
-  properties?: OMap<OpenapiSchema>;
+  properties?: OpenapiMap<OpenapiSchema>;
   additionalProperties?: true | OpenapiSchema
-} & OpenapiSchemaCommon;
+}
 
-type OpenapiSchemaArray = {
+export interface OpenapiSchemaArray extends OpenapiSchemaCommon {
   type: 'array';
   uniqueItems?: boolean;
   minItems?: number;
   maxItems?: number;
-  items: OpenapiSchema | OpenapiSchema[];
-} & OpenapiSchemaCommon;
+  items?: OpenapiSchema;
+}
 
-type OpenapiSchemaAllOf = {
+export interface OpenapiSchemaAllOf extends OpenapiSchemaCommon {
   allOf: OpenapiSchema[]
-} & OpenapiSchemaCommon;
+}
 
-type OpenapiSchemaOneOf = {
+export interface OpenapiSchemaOneOf extends OpenapiSchemaCommon {
   oneOf: OpenapiSchema[];
   discriminator?: {
     propertyName: string;
@@ -152,15 +152,16 @@ type OpenapiSchemaOneOf = {
       [key: string]: string;
     }
   };
-} & OpenapiSchemaCommon;
+}
 
-type OpenapiSchemaCommon = {
+export interface OpenapiSchemaCommon {
   title?: string;
+  description?: string;
   default?: any;
   nullable?: boolean;
   readOnly?: boolean;
   writeOnly?: boolean;
   externalDocs?: OpenapiExternalDocument;
   deprecated?: boolean;
-  example?: any;
-};
+  examples?: any;
+}
